# WebArchiver

./: .gitignore  Cargo.toml  diesel.toml  temp
migrations/2022-06-06-145746_create_tables/: down.sql  up.sql
src/: main.rs  model.rs  schema.rs
src/db/: linkindex.rs  mod.rs  pagerecord.rs  siteindex.rs  sitepage.rs  sitepages.rs
src/http/: mod.rs  request.rs
src/operations/: siteindex.rs
