[package]
name = "Sparchive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# diesel setup --database-url postgres://postgres:C0baltow-_-@localhost:5432/WebArchiverDB

[dependencies]
diesel = {version = "1.4.8", features = ["postgres"]}
dotenv = "0.15.0"